# evoos

./: Cargo.toml  Makefile  README.md  bootstrap.c  memory_management.h  process_management.h  system_calls.h  test_kernel
.cargo/: config.toml
bootloader/: Cargo.toml
evoos_kernel/: Cargo.toml  build.rs  link.x
evoos_kernel/src/: lib.rs
kernel/src/: main.rs
src/: memory_management.c  process_management.c  system_calls.c
tests/: memory_management_tests.c  process_management_tests.c  system_call_tests.c
