[package]
name = "evoos_kernel"
version = "0.1.0"
authors = ["KasinadhSarma"]
edition = "2018"

[dependencies]
x86_64 = { version = "0.14.3", default-features = false, features = ["instructions"] }
uart_16550 = { version = "0.2.4", default-features = false }
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rlibc = "1.0"
bootloader = "0.10.2"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
